--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.13",
     "@prisma/client": "^5.4.1",
+    "@turf/circle": "^6.5.0",
+    "@turf/turf": "^6.5.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "helmet": "^7.0.0",
